[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
build = "build.rs"

[lib]
name = "notifications"
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.71.1"

[profile]
dev.panic = "abort"
release.panic = "abort"


[dependencies]
wut = { path = "../wut-rs" }
